module-02-pulumi-import/exercises/cdk/cfn_template.yaml
Resources:
  cfexercise57D8B41F:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/Resource
  cfexercisePublicSubnet1SubnetBF9F7055:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet1
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/Subnet
  cfexercisePublicSubnet1RouteTable788AC571:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet1
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/RouteTable
  cfexercisePublicSubnet1RouteTableAssociation31328C0C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: cfexercisePublicSubnet1RouteTable788AC571
      SubnetId:
        Ref: cfexercisePublicSubnet1SubnetBF9F7055
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/RouteTableAssociation
  cfexercisePublicSubnet1DefaultRoute0D61B53A:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: cfexerciseIGW9542DBFE
      RouteTableId:
        Ref: cfexercisePublicSubnet1RouteTable788AC571
    DependsOn:
      - cfexerciseVPCGW4720C326
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/DefaultRoute
  cfexercisePublicSubnet1EIPC640E3A4:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet1
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/EIP
  cfexercisePublicSubnet1NATGateway364AB95A:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - cfexercisePublicSubnet1EIPC640E3A4
          - AllocationId
      SubnetId:
        Ref: cfexercisePublicSubnet1SubnetBF9F7055
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet1
    DependsOn:
      - cfexercisePublicSubnet1DefaultRoute0D61B53A
      - cfexercisePublicSubnet1RouteTableAssociation31328C0C
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet1/NATGateway
  cfexercisePublicSubnet2SubnetEBC56C4B:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet2
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet2/Subnet
  cfexercisePublicSubnet2RouteTable60D444AF:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PublicSubnet2
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet2/RouteTable
  cfexercisePublicSubnet2RouteTableAssociation9BB52271:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: cfexercisePublicSubnet2RouteTable60D444AF
      SubnetId:
        Ref: cfexercisePublicSubnet2SubnetEBC56C4B
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet2/RouteTableAssociation
  cfexercisePublicSubnet2DefaultRoute50E7AC40:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: cfexerciseIGW9542DBFE
      RouteTableId:
        Ref: cfexercisePublicSubnet2RouteTable60D444AF
    DependsOn:
      - cfexerciseVPCGW4720C326
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PublicSubnet2/DefaultRoute
  cfexercisePrivateSubnet1Subnet3C38B378:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.128.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkStack/cf-exercise/PrivateSubnet1
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet1/Subnet
  cfexercisePrivateSubnet1RouteTable150FF85E:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PrivateSubnet1
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet1/RouteTable
  cfexercisePrivateSubnet1RouteTableAssociationE8690AD2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: cfexercisePrivateSubnet1RouteTable150FF85E
      SubnetId:
        Ref: cfexercisePrivateSubnet1Subnet3C38B378
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet1/RouteTableAssociation
  cfexercisePrivateSubnet1DefaultRoute1A3BAEA1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: cfexercisePublicSubnet1NATGateway364AB95A
      RouteTableId:
        Ref: cfexercisePrivateSubnet1RouteTable150FF85E
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet1/DefaultRoute
  cfexercisePrivateSubnet2Subnet5D0FE66F:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.192.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkStack/cf-exercise/PrivateSubnet2
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet2/Subnet
  cfexercisePrivateSubnet2RouteTableC149B8EA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise/PrivateSubnet2
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet2/RouteTable
  cfexercisePrivateSubnet2RouteTableAssociation629CC6A5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: cfexercisePrivateSubnet2RouteTableC149B8EA
      SubnetId:
        Ref: cfexercisePrivateSubnet2Subnet5D0FE66F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet2/RouteTableAssociation
  cfexercisePrivateSubnet2DefaultRouteD1D606A7:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: cfexercisePublicSubnet1NATGateway364AB95A
      RouteTableId:
        Ref: cfexercisePrivateSubnet2RouteTableC149B8EA
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/PrivateSubnet2/DefaultRoute
  cfexerciseIGW9542DBFE:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/cf-exercise
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/IGW
  cfexerciseVPCGW4720C326:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: cfexerciseIGW9542DBFE
      VpcId:
        Ref: cfexercise57D8B41F
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/VPCGW
  cfexerciseRestrictDefaultSecurityGroupCustomResource9DF74FA2:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - cfexercise57D8B41F
          - DefaultSecurityGroup
      Account:
        Ref: AWS::AccountId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CdkStack/cf-exercise/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - "arn:"
                        - Ref: AWS::Partition
                        - ":ec2:"
                        - Ref: AWS::Region
                        - ":"
                        - Ref: AWS::AccountId
                        - :security-group/
                        - Fn::GetAtt:
                            - cfexercise57D8B41F
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: CdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs18.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: CdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e
      aws:asset:property: Code
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/22Pz07DMAzGn2X3NLBoe4BRIbQLi9ppV5SmZnhrnSlxWqFp707CgFw4+fPnfz8ruVQr+bgwc6hsf64G7OS1ZWPPIllvYJW8Hi5W1O900LXQsRvQtrEj4OwV1bjIsDfdAMUv3iYEZ9EwOvprzuJ5q3N4NfxiGGbzKbTHKcmyeEsMPunfhjvJT7bhhPoxAvFNNBBc9DbtjYHdWNJ07/+S9m7CHvyTCSASInD6/Ih0zDO7yJf4TVA76jGj3wS5HuQpPExKybVcLk4BsfKRGEeQzT1+AZHa6V9TAQAA
    Metadata:
      aws:cdk:path: CdkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  vpcId:
    Value:
      Ref: cfexercise57D8B41F
  privateSubnetId0:
    Value:
      Ref: cfexercisePrivateSubnet1Subnet3C38B378
  privateSubnetId1:
    Value:
      Ref: cfexercisePrivateSubnet2Subnet5D0FE66F
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
